First_Step/data/46/156/grade_comments.txt
-The compilation or preparation of execution has failed
Tools.java:27: error: '.class' expected
        tri(tab[]);
                 ^
1 error
Not compiled
